<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.user.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <!-- Wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- My History Title  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="@string/my_history"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/enter_month"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/input_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/enter_year"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/button_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:text="@string/filter"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_recycler_view_my_history_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:text="@string/there_is_no_quiz"
                android:textColor="@color/white"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_my_history_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>