<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.user.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <!-- Page Wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Hello Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <!-- Current User Label -->
            <TextView
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="Adrian Yu"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- Wrapper -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <!-- Quiz Code Input -->
                <EditText
                    android:id="@+id/input_quiz_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/enter_quiz_code"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp" />

                <!-- Join Button -->
                <Button
                    android:id="@+id/join_quiz_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:text="@string/join"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Join Our Quizzes Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <!-- Join Quiz Label -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/join_our_quizzes"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <!-- Empty Message -->
                <TextView
                    android:id="@+id/text_recycler_view_recommended_quiz_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/there_is_no_quiz"
                    android:textColor="@color/white" />

                <!-- Quiz List -->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_recommended_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>