<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.user.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <!-- Wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="@string/search_quiz"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- Quiz Name and Search Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <!-- Quiz Title Input -->
                <EditText
                    android:id="@+id/input_quiz_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="9"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/enter_quiz_title"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:singleLine="true" />

                <!-- Search Button -->
                <Button
                    android:id="@+id/button_search_quiz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:text="@string/search"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Searched Quizzes Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <TextView
                    android:id="@+id/text_recycler_view_searched_quiz_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/there_is_no_quiz"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_searched_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>